@@ -1,3 +1,7 @@
+[23.November 2008]
+- rect.rb: Rect#copy_values
+- staticobject.rb: added support for semisolidness
+
 [17.November 2008]
 - tests/test.rb: automatic requirement of tests (similar to the one used in
   freeVikings tests);
